@@ -25,28 +25,24 @@
 
   <import file="../contrib-build.xml"/>
 
-  <property name="memory.jar" location="${common.dir}/build/contrib/memory/lucene-memory-${version}.jar"/>
-  <available property="memory.jar.present" type="file" file="${memory.jar}"/>
-  
-  <property name="queries.jar" location="${common.dir}/build/contrib/queries/lucene-queries-${version}.jar"/>
-  <available property="queries.jar.present" type="file" file="${queries.jar}"/>
+  <contrib-uptodate name="memory" property="memory.uptodate" classpath.property="memory.jar"/>
+  <contrib-uptodate name="queries" property="queries.uptodate" classpath.property="queries.jar"/>
 
   <path id="classpath">
-    <pathelement path="${lucene.jar}"/>
     <pathelement path="${memory.jar}"/>
     <pathelement path="${queries.jar}"/>
-    <pathelement path="${project.classpath}"/>
+    <path refid="base.classpath"/>
   </path>
 
   <target name="compile-core" depends="build-memory, build-queries, common.compile-core" />
 
-  <target name="build-memory" unless="memory.jar.present">
-    <echo>Highlighter building dependency ${memory.jar}</echo>
+  <target name="build-memory" unless="memory.uptodate">
+    <echo>Highlighter building dependency contrib/memory</echo>
     <ant antfile="../memory/build.xml" target="default" inheritall="false" dir="../memory" />
   </target>
   
-  <target name="build-queries" unless="queries.jar.present">
-    <echo>Highlighter building dependency ${queries.jar}</echo>
+  <target name="build-queries" unless="queries.uptodate">
+    <echo>Highlighter building dependency contrib/queries</echo>
     <ant antfile="../queries/build.xml" target="default" inheritall="false" dir="../queries" />
   </target>
 </project>
