@@ -25,28 +25,27 @@
 
   <import file="../contrib-build.xml"/>
 
-  <property name="queries.jar" location="${common.dir}/build/contrib/queries/lucene-queries-${version}.jar"/>
+  <contrib-uptodate name="queries" property="queries.uptodate" classpath.property="queries.jar"/>
+  <property name="lucene.jar" location="${common.dir}/build/lucene-core-${version}.jar"/>
   <property name="servlet.jar" location="${common.dir}/lib/servlet-api-2.4.jar"/>
-  <available property="queries.jar.present" type="file" file="${queries.jar}"/>
   <available property="servlet.jar.present" type="file" file="${servlet.jar}"/>
 
 
   <path id="classpath">
-    <pathelement path="${lucene.jar}"/>
     <pathelement path="${queries.jar}"/>
-    <pathelement path="${project.classpath}"/>
+    <path refid="base.classpath"/>
   </path>
 
   <path id="web-classpath">
-    <pathelement path="${lucene.jar}"/>
     <pathelement path="${queries.jar}"/>
     <pathelement path="${servlet.jar}"/>
     <pathelement path="${build.dir}/${final.name}.jar"/>
+    <path refid="base.classpath"/>
   </path>
 
   <target name="compile-core" depends="build-queries, common.compile-core" />
 
-  <target name="build-queries" unless="queries.jar.present">
+  <target name="build-queries" unless="queries.uptodate">
     <echo>XML Parser building dependency ${queries.jar}</echo>
     <ant antfile="../queries/build.xml" target="default" inheritall="false" dir="../queries" />
   </target>
@@ -59,6 +58,9 @@
   <target name="build-web-demo"  description="Compiles demo" if="servlet.jar.present">
 
     <echo>XML Parser compiling web demo</echo>
+
+    <ant dir="${common.dir}" target="jar-core" inheritAll="false"/>
+
     <compile
       srcdir="src/demo/java"
       destdir="${build.dir}/classes/webdemo">
